@@ -1,3 +1,14 @@
+Next release
+============
+
+Bug Fixes
+---------
+
+- The method ``pyramid.request.Request.partial_application_url`` is no longer
+  in the API docs.  It was meant to be a private method; its publication in
+  the documentation as an API method was a mistake, and it has been renamed
+  to something private.
+
 1.3b1 (2012-02-26)
 ==================
 
